--- a/assets/scss/_skin.scss
+++ b/assets/scss/_skin.scss
@@ -1,7 +1,10 @@
 $color-primary: #165690;
-$color-primary2: saturate(darken($color-primary, 14%), 15%);
-$color-primary3: desaturate(lighten($color-primary, 15%), 40%);
+$color-primary2: #053159;
+$color-primary3: #517ba2;
 $color-accent: #df8a13;
 $color-dark: #232323;
+$color-dark2: #191919;
 $color-gray: darken(#ffffff, 13.5%);
 $color-light: #ffffff;
+
+
