--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -7,4 +7,9 @@ $md: 992px;
 $sm: 768px;
 $xs: 576px;
 
+$lg-m: 1200px - 0.2;
+$md-m: 992px - 0.2;
+$sm-m: 768px - 0.2;
+$xs-m: 576px - 0.2;
+
 $gap: 15px;
