--- a/assets/scss/_skin.scss
+++ b/assets/scss/_skin.scss
@@ -4,7 +4,8 @@ $color-primary3: #517ba2;
 $color-accent: #df8a13;
 $color-dark: #232323;
 $color-dark2: #191919;
-$color-gray: darken(#ffffff, 13.5%);
+$color-gray: #dddddd;
+$color-gray2: #f1f1f1;
 $color-light: #ffffff;
 
 
