--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -9,13 +9,51 @@ body {
   overflow-y: scroll;
 }
 
+h1{
+  font-family: $font-header;
+  font-size: 3rem;
+  margin: -7.5px 0 45px;
+  
+  
+    &::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    margin: 0.85em 0 0 15px;
+    border-bottom: 3px solid rgba(240, 173, 79, 0.7);
+      }
+ }
+
+h2 {
+  font-size: 2.5rem;
+  font-family: $font-header;
+  margin: 60px 0 45px 45px;
+  
+  &::before{
+    position: absolute;
+    left: 0;
+    width: 30px;
+    margin: 0.25em 0 0 0;
+    content: "";
+    border-bottom: 3px solid rgba(240, 173, 79, 0.7);
+      }
+  &::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    margin: 0.85em 0 0 15px;
+    border-bottom: 3px solid rgba(240, 173, 79, 0.7);
+      }
+
+}
+
 a{
   color: $color-primary;
   transition: color 0.4s;
- 
+  
   &:hover{
     color: $color-accent;
     text-decoration: none;
-  }
-}
 
+}
+}
