--- a/assets/scss/_bootstrap-theming.scss
+++ b/assets/scss/_bootstrap-theming.scss
@@ -114,3 +114,11 @@
 .thumbnail {
   transition: background-color 0.4s;
 }
+
+
+
+// .embed-responsive {
+//   border: 1px solid #dddddd;
+//   border-bottom: none;
+//   border-radius: 4px 4px 0 0;
+// }
