--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -9,9 +9,33 @@ body {
   overflow-y: scroll;
 }
 
+@media (min-width: $xs-m){
+ h1{  
+   font-size: 3rem;
+ }
+ h2{
+  font-size: 2.5rem;
+ }
+ h3{
+  font-size: 1.5rem;
+ }
+}
+
+@media (max-width: $xs-m) {
+  h1{  
+    font-size: 2rem;
+  }
+  h2{
+   font-size: 1.75rem;
+  }
+  h3{
+   font-size: 1.25rem;
+  }
+
+}
+
 h1{
   font-family: $font-header;
-  font-size: 3rem;
   margin: -7.5px 0 45px;
   
   
@@ -25,7 +49,6 @@ h1{
  }
 
 h2 {
-  font-size: 2.5rem;
   font-family: $font-header;
   margin: 60px 0 45px 45px;
   
