--- a/assets/scss/_bootstrap-theming.scss
+++ b/assets/scss/_bootstrap-theming.scss
@@ -115,3 +115,9 @@
   transition: background-color 0.4s;
 }
 
+// стилизация видеоплеера
+
+.iframe_wrapper {
+border-top-left-radius: 12px;
+border-top-right-radius: 12px;
+}
